# techpark-cpp-homework1

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.c  main.h  techpatk_cpp_dz1  techpatk_cpp_dz1.cbp
cmake_make_gtest_cppunit/: CMakeLists.txt  DArray.cpp  DArray.h  Heap.cpp  Heap.h  LinkedList.cpp  LinkedList.h  Queue.cpp  Queue.h  Stack.cpp  Stack.h  main.cpp  stack_corr.cpp  tests_cppunit.cpp  tests_gtest.cpp
lib/googletest-master/googlemock/include/gmock/: gmock-matchers.h
lib/googletest-master/googlemock/include/gmock/internal/: gmock-internal-utils.h
lib/googletest-master/googlemock/scripts/: upload.py
lib/googletest-master/googlemock/test/: gmock-actions_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-spec-builders_test.cc  gmock_link_test.h
lib/googletest-master/googletest/include/gtest/: gtest.h
lib/googletest-master/googletest/samples/: prime_tables.h  sample1_unittest.cc  sample3-inl.h  sample5_unittest.cc  sample8_unittest.cc
lib/googletest-master/googletest/scripts/: upload.py
lib/googletest-master/googletest/src/: gtest.cc
lib/googletest-master/googletest/test/: googletest-break-on-failure-unittest.py  googletest-filter-unittest.py  googletest-json-output-unittest.py  googletest-listener-test.cc  googletest-output-test.py  googletest-output-test_.cc  googletest-param-test-test.cc  gtest-typed-test_test.cc  gtest_list_output_unittest.py  gtest_unittest.cc
test/: test.cpp
(+2 files in other folders)
